# BP

./: .gitignore  LICENSE  README.md  docker-compose.yml
rag/: .env.example  Dockerfile  api.py  changes_state.py  chunk.py  credentials.json  delete_data.py  document_processor.py  download_files.py  embedding_model.py  google_drive_downloader.py  insert_data.py  llm_wraper.py  log.py  main.py  processing.py  pyproject.toml  rag_pipeline.py  requirements.txt  requirements_eval.txt  requirements_multiformat.txt  reranker.py  retrieval_eval_results.csv  rewriter.py  utils.py  vector_store.py
rag/scripts/: delete_file.py  delete_schema.py  graph.py  insert_data.py  partition.py  processing.py  query.py
rag/tests/: ragas_evaluation.py  retrieval_eval.py  test_benchmark_insert.py  test_embed_models.py  test_hybrid_query.py  test_query.py  testset_generation.py
rag/tests/results/: ragas_evaluation_20250412_125754.jsonl
rag/tests/test-sets/: old_queries_retrieval.jsonl  queries_retrieval.jsonl  queries_retrieval_cursed.jsonl  ragas_multi_hop.jsonl  ragas_single_hop.jsonl  ragas_single_hop_results_20250412_125112.jsonl  testik.jsonl  testset-test-wiki.jsonl  testset_20250411_165727.jsonl  testset_20250411_170232.jsonl  testset_20250411_170851.jsonl  testset_20250411_171235.jsonl  testset_20250411_171518.jsonl
rag/tests/test-sets/evaluations/: factual_correctness_modes.jsonl  ragas_evaluation_20250414_180949.jsonl  ragas_evaluation_20250414_184125.jsonl  ragas_evaluation_20250415_125911.jsonl  ragas_evaluation_20250415_131757.jsonl  ragas_evaluation_20250415_133857.jsonl  (+26 more)
(+49 files in other folders)
